--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#1E3A8A" />
+  <meta name="theme-color" content="#312E81" />
   <meta name="description" content="SEA countries currency converter" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -44,7 +44,7 @@
   <title>SEA Currency Converter</title>
 </head>
 
-<body class="bg-blue-900 font-google">
+<body class="bg-indigo-900 font-google">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
