--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <title>SEA Currency Converter</title>
 </head>
 
-<body class="bg-gradient-to-b from-indigo-900 to-indigo-800 font-google">
+<body class="bg-gradient-to-b from-indigo-900 via-indigo-800 to-indigo-700 font-google">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
