--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>SEA Currency Converter</title>
+  <title>Simple Currency Converter</title>
 </head>
 
 <body class="bg-gradient-to-b from-indigo-900 via-indigo-800 to-indigo-700 font-google">
